# yolo11

./: README.md  pyproject.toml
scripts/: convert_hf_to_onnx.sh  convert_to_onnx.sh  train_from_hf.sh
webui/: app.js  index.html  styles.css
