[project]
name = "yolo11"
version = "0.1.0"
description = "YOLO11 labeling, training, evaluation, and ONNX export pipeline"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "huggingface-hub==0.36.0",
  "ultralytics==8.4.53",
  "torch==2.4.1",
  "onnx==1.21.0",
  "onnxruntime==1.23.2",
  "onnxslim==0.1.94",
]

[build-system]
requires = ["setuptools==75.8.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"
